--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,29 @@
+      
 {
-    "manifest_version": 3,
-    "name": "Alias Navigator",
-    "description": "Use terminal-style aliases to navigate the web.",
-    "version": "1.0",
-    "permissions": ["storage"],
-    "omnibox": { "keyword": "go" },
-    "action": {
-      "default_popup": "views/popup.html",
-      "default_icon": {
-        "128": "assets/icon128.png"
-      }
-    },
-    "background": {
-      "service_worker": "scripts/background.js"
-    },
-    "icons": {
+  "manifest_version": 3,
+  "name": "URLias",
+  "description": "Use terminal-style aliases to navigate the web.",
+  "version": "1.0",
+  "permissions": ["storage", "tabs"],
+  "omnibox": { "keyword": "go" },
+  "action": {
+    "default_popup": "views/popup.html",
+    "default_icon": {
       "128": "assets/icon128.png"
     }
+  },
+  "background": {
+    "scripts": ["scripts/background.js"]
+  },
+  "icons": {
+    "128": "assets/icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "URLias@example.com",
+      "strict_min_version": "109.0"
+    }
   }
-  
+}
+
+    
