Update name and icon, Allow users to add basic parameters to aliases The user can now do go gh user and they will be able to visit github.com/user, similarly would work for any url where the parameter can be directly appended to the url To do: Make it work with different types of urls, allow users to set their own parameterized urls and edit them

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Alias Navigator",
+    "name": "URLias",
     "description": "Use terminal-style aliases to navigate the web.",
     "version": "1.0",
     "permissions": ["storage"],
