Add option to load default aliases Allow users to load some default aliases which are hardcoded for now, in the future we should allow them to load from a json file which will make things easier for everyone

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "URLias",
   "description": "Use terminal-style aliases to navigate the web.",
   "version": "1.0",
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "notifications"],
   "omnibox": { "keyword": "go" },
   "action": {
     "default_popup": "views/popup.html",
