--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
       }
     },
     "background": {
-      "service_worker": "scripts/background.js"
+      "service_worker": "scripts/background.js",
+      "type": "module"
     },
     "icons": {
       "128": "assets/icon128.png"
