--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
       "service_worker": "scripts/background.js",
       "type": "module"
     },
+    "options_page": "views/options.html",
     "icons": {
       "128": "assets/icon128.png"
     }
